@@ -1,3 +1,8 @@
+2013-09-26  Jeffrey Stedfast  <fejj@gnome.org>
+
+	* gmime/gmime.c (g_mime_init): Initialize the mutexes
+	earlier. Fixes bug #708818.
+
 2013-09-15  Jeffrey Stedfast  <fejj@gnome.org>
 
 	* README: Bumped version
